# double-batched-fft-library

./: .clang-format  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  third-party-programs.txt
_sources/: index.rst.txt
_sources/api/: generator.rst.txt  index.rst.txt  jit_cache.rst.txt  online_compiler.rst.txt  plan.rst.txt  utilities.rst.txt
_sources/manual/: data-layout.rst.txt  examples.rst.txt  plans.rst.txt
api/: configuration.html  generator.html  index.html  jit_cache.html  online_compiler.html  plan.html  utilities.html
benchmark/: CMakeLists.txt  adapter.hpp  allocator.hpp  args.cpp  args.hpp  check.hpp  common.hpp  common_sycl.hpp  csv_printer.hpp  cuda_allocator.hpp  cufft_descriptor.hpp  initialize.cu  initialize.hpp  main-cuda.cpp  main-sycl.cpp  mkl_descriptor.hpp  real_type.hpp  result.hpp  signal.hpp  sycl_allocator.hpp  tensor.hpp  test-cufft.cpp  test-double-batched-fft.cpp  test-mkl.cpp  test-vkfft.cpp  test.hpp  vkfft_error.cpp  vkfft_error.hpp
clir/: CMakeLists.txt
clir/cmake/: CommonOptions.cmake
clir/include/clir/: attr.hpp  attr_defs.hpp  builder.hpp  builtin_function.hpp  builtin_type.hpp  data_type.hpp  expr.hpp  func.hpp  handle.hpp  op.hpp  prog.hpp  stmt.hpp  var.hpp  virtual_type_list.hpp  visit.hpp
clir/include/clir/internal/: data_type_node.hpp  expr_node.hpp  function_node.hpp  program_node.hpp  stmt_node.hpp
clir/include/clir/visitor/: codegen_opencl.hpp  equal_expr.hpp  required_extensions.hpp  to_imm.hpp  unique_names.hpp  unsafe_simplification.hpp
clir/src/: CMakeLists.txt  builder.cpp  builtin_function.cpp  builtin_type.cpp  data_type.cpp  expr.cpp  func.cpp  op.cpp  stmt.cpp  string_util.cpp  var.cpp
clir/src/visitor/: codegen_opencl.cpp  equal_expr.cpp  required_extensions.cpp  to_imm.cpp  unique_names.cpp  unsafe_simplification.cpp
clir/test/: CMakeLists.txt  visitor.cpp
cmake/: AddAotKernelsToTarget.cmake  CommonOptions.cmake  FindLevelZero.cmake  FindOpenCL.cmake  FindSYCL.cmake  FindSphinx.cmake  FindVkFFT.cmake  Findocloc.cmake  GitVersion.cmake  InstallLib.cmake  bbfft-aot-generate-config.cmake  bbfft-base-config.cmake  bbfft-opencl-config.cmake  bbfft-sycl-config.cmake  clir-config.cmake  template.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  requirements.txt
docs/api/: configuration.rst  generator.rst  index.rst  plan.rst  utilities.rst
docs/manual/: build.rst  caching.rst  descriptor.rst  examples.rst  index.rst  plans.rst
examples/: CMakeLists.txt
examples/aot/: CMakeLists.txt  README.md  aot_cache.cpp  configurations.cpp  configurations.hpp  generate.cpp  main.cpp
examples/cache/: CMakeLists.txt  main.cpp
examples/fft3d/: CMakeLists.txt  args.cpp  args.hpp  common.hpp  fft3d-cufft.cpp  fft3d-level-zero.cpp  fft3d-opencl.cpp  fft3d-sycl.cpp  fft3d.hpp  main.cpp  utility.hpp
examples/large_fft1d/: CMakeLists.txt  args.cpp  args.hpp  fft1d.cpp  fft1d.hpp  fft1d_custom.cpp  fft1d_custom.hpp  fft1d_custom2.cpp  fft1d_custom2.hpp  fft1d_ref.hpp  main.cpp  refdft.hpp  refdft_analytic.hpp  test_signal.cpp  test_signal.hpp
examples/offline_generator/: CMakeLists.txt  offline_generator.cpp
examples/test_bench/: CMakeLists.txt  test_bench_level_zero.cpp  test_bench_level_zero.hpp  test_bench_opencl.cpp  test_bench_opencl.hpp  test_bench_sycl.cpp  test_bench_sycl.hpp
examples/transpose_fft_transpose/: CMakeLists.txt  tft.cpp
include/bbfft/: aot_cache.hpp  bad_configuration.hpp  cache.hpp  configuration.hpp  device_info.hpp  generator.hpp  jit_cache.hpp  jit_cache_all.hpp  mem.hpp  module_format.hpp  parser.hpp  plan.hpp  prime_factorization.hpp  shared_handle.hpp  tensor_indexer.hpp  user_module.hpp  version.hpp.in
include/clir/: attr.hpp  builder.hpp  builtin_function.hpp  builtin_type.hpp  kernel.hpp  op.hpp  stmt.hpp  string_util.hpp  var.hpp  visit.hpp
manual/: build.html  caching.html  data-layout.html  descriptor.html  examples.html  index.html  plans.html
src/: CMakeLists.txt
src/base/: CMakeLists.txt  aot_cache.cpp  bad_configuration.cpp  cache.cpp  compiler_options.cpp  configuration.cpp  device_info.cpp  dummy_api.hpp  dummy_kernel_bundle.hpp  generator.cpp  jit_cache.cpp  jit_cache_all.cpp  math.cpp  math.hpp  mixed_radix_fft.cpp  mixed_radix_fft.hpp  parser.cpp  prime_factorization.cpp  prime_factorization.hpp  root_of_unity.cpp  root_of_unity.hpp  scrambler.cpp  scrambler.hpp  user_module.cpp
src/base/generator/: accessor.hpp  f2fft_gen.cpp  f2fft_gen.hpp  factor2_slm_fft.cpp  sbfft_gen.cpp  sbfft_gen.hpp  small_batch_fft.cpp  snippet.cpp  snippet.hpp  template_magic.hpp  tensor_accessor.cpp  tensor_accessor.hpp  tensor_view.hpp  utility.cpp  utility.hpp
src/cl/: CMakeLists.txt  api.cpp  api.hpp  argument_handler.hpp  device.cpp  error.cpp  kernel.cpp  kernel.hpp  kernel_bundle.cpp  kernel_bundle.hpp  online_compiler.cpp  plan.cpp
src/clir/: CMakeLists.txt  builder.cpp  builtin_function.cpp  data_type.cpp  expr.cpp
src/clir/visitor/: codegen_opencl.cpp  equal_expr.cpp  unique_names.cpp  unsafe_simplification.cpp
src/common/: algorithm.hpp  (+1 more)
src/sycl/: CMakeLists.txt  api.cpp  api.hpp  argument_handler.hpp  backend_bundle.hpp  build_wrapper.hpp  cl_backend_bundle.cpp  cl_backend_bundle.hpp  device.cpp  kernel_bundle.cpp  kernel_bundle.hpp  online_compiler.cpp  plan.cpp  ze_backend_bundle.cpp  ze_backend_bundle.hpp
src/ze/: CMakeLists.txt  api.cpp  api.hpp  argument_handler.hpp  device.cpp  error.cpp  event_pool.cpp  event_pool.hpp  kernel.cpp  kernel.hpp  kernel_bundle.cpp  kernel_bundle.hpp  online_compiler.cpp  plan.cpp  shared_handle.hpp
test/: CMakeLists.txt  c2c.cpp  callback.cpp  codegen.cpp  error.cpp  fft.hpp  main.cpp  parser.cpp  r2c.cpp  tensor.cpp  util.cpp  visitor.cpp
tools/: CMakeLists.txt  download_spec.sh  powers.py  reinterpret_functions.py  spec_to_builtin_functions.py
tools/aot/: CMakeLists.txt  args.cpp  args.hpp  info.cpp  info.hpp  main.cpp
tools/device_info/: CMakeLists.txt  main.cpp
tools/offline/: CMakeLists.txt  args.cpp  args.hpp  main.cpp
(+31 files in other folders)
